syntax = "proto3";
package heimdallv2.types;

import "gogoproto/gogo.proto";

option go_package = "github.com/0xPolygon/heimdall-v2/types";

// HeimdallHash defines the hash
message HeimdallHash {
  option (gogoproto.equal) = true;
  bytes hash = 1;
}

// TxHash defines the hash of the transaction
message TxHash {
  option (gogoproto.equal) = true;
  bytes hash = 1;
}
